Toggle & Fontawesome Icons, Typography Color Palette

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/ea529ee051.js" crossorigin="anonymous"></script>
     <title>Manuel de Arpe</title>
 </head>
 <body>
     <section class="showcase">
         <header>
-            <h2 class="logo">Manuel de Arpe</h2>
+            <div>
+                <img src="./assets/logo/monogram.svg" alt="" class="monogram">
+                <h2 class="logo archive-garamond-pro dark-brown">Manuel de Arpe</h2>
+            </div>
             <div class="toggle"></div>
         </header>
 
@@ -18,17 +23,17 @@
             <div class="overlay"></div>
 
             <div class="text">
-                <h2>Manuel de Arpe</h2>
-                <h3>Pintor y Restaurador</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis velit neque ex tempora doloribus repellat ut minima. Aut, et!</p>
-                <a href="#">Explore</a>
+                <h2 class="archive-garamond-pro dark-brown">Diario</h2>
+                <h3 class="archive-garamond-bold medium-brown">Pintor y Restaurador</h3>
+                <p class="dark-brown">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit veritatis velit neque ex tempora doloribus repellat ut minima. Aut, et!</p>
+                <a href="#" class="dark-brown">Explore</a>
             </div>
 
             
             <ul class="social">
-                <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
-                <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
-                <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
+                <li><a href=""><i class="fab fa-youtube fa-3x"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram-square fa-3x"></i></a></li>
             </ul>
     </section>
 
